# Ray-Tracing-Project

./: CMakeLists.txt  README.md
include/brdf/: blinn-phong_specular.h  brdf.h  fresnel_reflection.h  glossy_reflection.h  lambertian.h  perfect_reflection.h  perfect_specular.h  phong_specular.h  sampled_brdf.h
include/btdf/: btdf.h  fresnel_refraction.h  perfect_refraction.h
include/camera/: camera.h  pinhole_camera.h
include/event/: event_manager.h  event_queue.h  rtevent.h
include/geometry/: cylinder.h  disk.h  geometry.h  hitresult.h  light_geometry.h  plane.h  rectangle.h  sphere.h
include/image/: imagewriter.h  pngwriter.h
include/light/: ambient.h  arealight.h  directional.h  light.h  point.h
include/material/: blinn-phong.h  emissive.h  glossy.h  material.h  matte.h  phong.h  reflective.h  refractive.h
include/maths/: colour_rgb.h  maths.h  maths.h.gch  point3.h  ray.h  vector3.h
include/raytracer/: arealight_tracer.h  direct_tracer.h  raytracer.h  recursive_tracer.h
include/sampling/: multijittered_sampler.h  regular_sampler.h  sampler.h
include/scene/: scene.h
include/viewer/: window.h
source/: arealight_gloss.cpp  arealight_scene.cpp  first_scene.cpp  glossy_scene.cpp  main.cpp  recursive.cpp
source/brdf/: blinn-phong_specular.cpp  fresnel_reflection.cpp  glossy_reflection.cpp  lambertian.cpp  perfect_reflection.cpp  perfect_specular.cpp  phong_specular.cpp
source/btdf/: fresnel_refraction.cpp  perfect_refraction.cpp
source/camera/: pinhole_camera.cpp
source/event/: event_manager.cpp
source/geometry/: cylinder.cpp  disk.cpp  plane.cpp  rectangle.cpp  sphere.cpp
source/image/: pngwriter.cpp
source/light/: ambient.cpp  arealight.cpp  directional.cpp  point.cpp
source/material/: blinn-phong.cpp  emissive.cpp  matte.cpp  phong.cpp
source/maths/: .vector3.cpp.swp  CMakeLists.txt  colour_rgb.cpp  point3.cpp  ray.cpp  vector3.cpp
source/raytracer/: arealight_tracer.cpp  direct_tracer.cpp  recursive_tracer.cpp
source/sampling/: multijittered_sampler.cpp  regular_sampler.cpp  sampler.cpp
source/scene/: scene.cpp
source/viewer/: window.cpp
